headful-browser-audio-video-capturing-server/deployment/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: capturing-server
  name: capturing-server
spec:
  containers:
    - image: yaskovdev/capturing-server
      name: capturing-server
      ports:
        - containerPort: 8080
  dnsPolicy: ClusterFirst
  restartPolicy: Always
