headful-browser-audio-video-capturing-server/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: capturing-server
  name: capturing-server-service
spec:
  type: NodePort
  ports:
    - nodePort: 32674
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    run: capturing-server
